cclogic.com (archived on 2009-11-01)
{
  "alexa_rank": 86767,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 7881,
  "classifier_probability": 0.84,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.12,
  "homepage_snapshot_redirected_domain": "cclogic.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091228152131id_/http://www.cclogic.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091228152131id_/http%3A//cclogic.com",
  "interval": "2009_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "cclogic.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091101135136id_/http%3A//www.cclogic.com/Privacy-Policy.html",
  "policy_title": "Privacy Policy| Offshore Company Formation |",
  "policy_url": "cclogic.com/Privacy-Policy.html",
  "sha1": "db20da288a98192cd4f8c43ad7ff3be997b8a1a3",
  "simhash": 10978669351552322489,
  "simhash_updated": false,
  "site_hostname": "cclogic.com",
  "site_url": "http://cclogic.com",
  "smog": 15.99,
  "strict_updated": false,
  "timestamp": "20091101135136",
  "word_count": 1292,
  "year": 2009
}

--- a/c/cc/ccl/cclogic.com.html
+++ b/c/cc/ccl/cclogic.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the cclogic.com privacy policy that was archived on 2009-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090620171058id_/http%3A//www.cclogic.com/Privacy-Policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cclogic.com privacy policy that was archived on 2009-11-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091101135136id_/http%3A//www.cclogic.com/Privacy-Policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb"><head>
-		  <base href="http://cclogic.com/Privacy-Policy.html">
+		  <base href="http://www.cclogic.com/Privacy-Policy.html">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="robots" content="index, follow">
   <meta name="keywords" content="privacy policy, cyprus company formation, online payment">
@@ -67,7 +67,7 @@
 					</div>
 								<div id="horiz-menu" class="splitmenu">
 						<div class="wrapper">
-										<ul class="menutop"><li class="parent  item1"><a href="http://cclogic.com/" class="topdaddy"><span>Main Menu</span></a></li><li class="parent  item53"><a href="http://cclogic.com/Cyprus-Company-Formation/Cyprus-Company-Formation-about.html" class="topdaddy"><span>Cyprus Company</span></a></li><li class="parent  item54"><a href="http://cclogic.com/Rates-Fees/Merchant-Account-Rates-and-Fees.html" class="topdaddy"><span>Merchant Account</span></a></li><li class="parent  item58"><a href="http://cclogic.com/offshore-bank-account-Tanzania/index.php" class="topdaddy"><span>Bank Accounts</span></a></li><li class="parent  item177"><a href="http://cclogic.com/Merchant-Services/Cyprus-Company-Formation-bundled-packages.html" class="topdaddy"><span>Offshore Company Packages</span></a></li><li class="parent  item88"><a href="http://cclogic.com/component/option,com_rsform/Itemid,88/" class="topdaddy"><span>Contact</span></a></li><li class="parent  item82"><a href="http://cclogic.com/About-Us/CCLOGIC.COM.html" class="topdaddy"><span>About Us</span></a></li><li class="item210"><a href="http://cclogic.com/component/option,com_quickfaq/Itemid,210/view,quickfaq/"><span>F.A.Q</span></a></li></ul>									</div>
+										<ul class="menutop"><li class="parent  item1"><a href="http://www.cclogic.com/" class="topdaddy"><span>Main Menu</span></a></li><li class="parent  item53"><a href="http://www.cclogic.com/Cyprus-Company-Formation/Cyprus-Company-Formation-about.html" class="topdaddy"><span>Cyprus Company</span></a></li><li class="parent  item54"><a href="http://www.cclogic.com/Rates-Fees/Merchant-Account-Rates-and-Fees.html" class="topdaddy"><span>Merchant Account</span></a></li><li class="parent  item58"><a href="http://www.cclogic.com/offshore-bank-account-Tanzania/index.php" class="topdaddy"><span>Bank Accounts</span></a></li><li class="parent  item177"><a href="http://www.cclogic.com/Merchant-Services/Cyprus-Company-Formation-bundled-packages.html" class="topdaddy"><span>Offshore Company Packages</span></a></li><li class="parent  item88"><a href="https://www.cclogic.com/support" class="topdaddy"><span>Contact</span></a></li><li class="parent  item82"><a href="http://www.cclogic.com/About-Us/CCLOGIC.COM.html" class="topdaddy"><span>About Us</span></a></li><li class="item210"><a href="http://www.cclogic.com/component/option,com_quickfaq/Itemid,210/view,quickfaq/"><span>F.A.Q</span></a></li></ul>									</div>
 					</div>
 												<div class="div-spacer"></div>
 				<!-- End Header -->
@@ -80,7 +80,7 @@
 						<div class="main-height">
 																							<div class="moduletable_menu">
 					<h3>Online Applications</h3>
-					<ul class="menu"><li class="item15"><a href="http://www.cclogic.com/component/option,com_rsform/Itemid,15/"><span>Cyprus Bank Account</span></a></li><li class="item164"><a href="http://www.cclogic.com/component/option,com_rsform/Itemid,164/"><span>Tanzania Bank Account</span></a></li><li class="item111"><a href="http://www.cclogic.com/component/option,com_rsform/Itemid,111/"><span>SignUp - Merchant Account</span></a></li><li class="item172"><a href="http://www.cclogic.com/component/option,com_rsform/Itemid,172/"><span>Order Offshore Package</span></a></li><li class="item77"><a href="http://www.cclogic.com/component/option,com_rsform/Itemid,77/"><span>Cyprus Company Formation</span></a></li><li class="item174"><a href="https://www.cclogic.com/component/option,com_rsform/Itemid,174/"><span>Belize Company Formation</span></a></li><li class="item175"><a href="http://www.cclogic.com/component/option,com_rsform/Itemid,175/"><span>BVI Company Formation</span></a></li><li class="item176"><a href="http://www.cclogic.com/component/option,com_rsform/Itemid,176/"><span>Seychelles Company Formation</span></a></li><li class="item220"><a href="http://www.cclogic.com/component/option,com_rsform/Itemid,220/"><span>Offshore Trust Cyprus</span></a></li><li class="item13"><a href="/component/option,com_quickfaq/Itemid,13/view,quickfaq/"><span>FAQ</span></a></li><li class="item11"><a href="/Visa-and-Mastercard-Regulations/index.php"><span>Visa and MasterCard Regulations</span></a></li><li class="item230"><a href="/component/option,com_rsform/Itemid,230/"><span>Pro Offshore Packages</span></a></li></ul>		</div>
+					<ul class="menu"><li class="item15"><a href="http://www.cclogic.com/register-offshore-company-online/open-cyprus-bank-account.html"><span>Cyprus Bank Account</span></a></li><li class="item164"><a href="http://www.cclogic.com/register-offshore-company-online/cyprus-company/register-forex-trading-company.html"><span>Forex Trading Company</span></a></li><li class="item111"><a href="http://www.cclogic.com/component/option,com_rsform/Itemid,111/"><span>SignUp - Merchant Account</span></a></li><li class="item172"><a href="http://www.cclogic.com/register-offshore-company-online/cyprus-company-packages.html"><span>Cyprus Company Package</span></a></li><li class="item77"><a href="http://www.cclogic.com/register-offshore-company-online/cyprus-company.html"><span>Cyprus Company Formation</span></a></li><li class="item174"><a href="http://www.cclogic.com/register-offshore-company-online/register-belize-company.html"><span>Belize Company Formation</span></a></li><li class="item175"><a href="http://www.cclogic.com/register-offshore-company-online/register-bvi-company.html"><span>BVI Company Formation</span></a></li><li class="item176"><a href="http://www.cclogic.com/register-offshore-company-online/register-seychelles-company.html"><span>Seychelles Company Formation</span></a></li><li class="item220"><a href="http://www.cclogic.com/register-offshore-company-online/cyprus-company/offshore-trust-formation.html"><span>Offshore Trust Cyprus</span></a></li><li class="item13"><a href="/component/option,com_quickfaq/Itemid,13/view,quickfaq/"><span>FAQ</span></a></li><li class="item230"><a href="http://www.cclogic.com/register-offshore-company-online/offshore-company-packages.html"><span>Pro Offshore Packages</span></a></li><li class="item11"><a href="/Visa-and-Mastercard-Regulations/index.php"><span>Visa and MasterCard Regulations</span></a></li><li class="item234"><a href="http://www.cclogic.com/forum"><span>Business Forum</span></a></li></ul>		</div>
 			<div class="moduletable-hilite8">
 					<p align="center">
 <!-- Begin LiveResponse Javascript Code -->
@@ -113,7 +113,7 @@
 		<a href="/Privacy-Policy/Print.html" title="Print" onclick="window.open(this.href,'win2','status=no,toolbar=no,scrollbars=yes,titlebar=no,menubar=no,resizable=yes,width=640,height=480,directories=no,location=no'); return false;" rel="nofollow"><img src="/templates/rt_versatility4_j15/images/printButton.png" alt="Print"></a>		</td>
 		
 				<td align="right" width="100%" class="buttonheading">
-		<a href="/component/option,com_mailto/link,aHR0cDovL2NjbG9naWMuY29tL1ByaXZhY3ktUG9saWN5Lmh0bWw=/tmpl,component/" title="E-mail" onclick="window.open(this.href,'win2','width=400,height=350,menubar=yes,resizable=yes'); return false;"><img src="/templates/rt_versatility4_j15/images/emailButton.png" alt="E-mail"></a>		</td>
+		<a href="/component/option,com_mailto/link,aHR0cDovL3d3dy5jY2xvZ2ljLmNvbS9Qcml2YWN5LVBvbGljeS5odG1s/tmpl,component/" title="E-mail" onclick="window.open(this.href,'win2','width=400,height=350,menubar=yes,resizable=yes'); return false;"><img src="/templates/rt_versatility4_j15/images/emailButton.png" alt="E-mail"></a>		</td>
 					</tr>
 </tbody></table>
 
@@ -128,11 +128,11 @@
  <!--
  var prefix = '&#109;a' + 'i&#108;' + '&#116;o';
  var path = 'hr' + 'ef' + '=';
- var addy54340 = '&#105;nf&#111;' + '&#64;';
- addy54340 = addy54340 + 'ccl&#111;g&#105;c' + '&#46;' + 'c&#111;m';
- var addy_text54340 = '&#105;nf&#111;' + '&#64;' + 'ccl&#111;g&#105;c' + '&#46;' + 'c&#111;m';
- document.write( '<a ' + path + '\'' + prefix + ':' + addy54340 + '\'>' );
- document.write( addy_text54340 );
+ var addy72704 = '&#105;nf&#111;' + '&#64;';
+ addy72704 = addy72704 + 'ccl&#111;g&#105;c' + '&#46;' + 'c&#111;m';
+ var addy_text72704 = '&#105;nf&#111;' + '&#64;' + 'ccl&#111;g&#105;c' + '&#46;' + 'c&#111;m';
+ document.write( '<a ' + path + '\'' + prefix + ':' + addy72704 + '\'>' );
+ document.write( addy_text72704 );
  document.write( '<\/a>' );
  //-->\n </script><a href="mailto:info@cclogic.com">info@cclogic.com</a> <script language="JavaScript" type="text/javascript">
  <!--
@@ -163,8 +163,13 @@
 								</div>
 				</div>
 		<!-- Begin Bottom Section -->
-				<div class="wrapper">
-								<div id="bottom">
+						<div id="bottom-menu"><div class="wrapper">
+					<div class="moduletable">
+					<ul id="mainlevel-bottom"><li><a href="/offshore-company-formation/Belize-Company-Formation.html" class="mainlevel-bottom">Reg. Belize Company</a></li><li><a href="/offshore-company-formation/BVI-Company-Formation.html" class="mainlevel-bottom">Reg. BVI Company</a></li><li><a href="/offshore-company-formation/Seychelles-Company-Formation.html" class="mainlevel-bottom">Reg. Seychelles Company</a></li><li><a href="/Forext-Trading-Companies/Forex-Trading-Company-formation-and-registration.html" class="mainlevel-bottom">Reg. Forex Company</a></li><li><a href="/offshore-company-formation/Offshore-Company-Formation-and-Bank-Account-Packages.html" class="mainlevel-bottom">Offshore Company Packages</a></li></ul>		</div>
+	
+		</div></div>
+						<div id="bottom">
+						<div class="wrapper">
 							<div id="bottommodules" class="spacer w33">
 										<div class="block">
 								<div class="module-hilite1">
@@ -172,13 +177,32 @@
 				<div>
 					<div>
 													<h3>Cyprus Bank Account</h3>
-											<table border="0"> 				<tbody> 					<tr> 						<td> 						
-	<img src="/images/stories/cyprus-active.png" alt="Become a Cyprus Bank Account, learn more!" width="5" border="0" height="6"><br></td> 						<td> 						
-	<a href="/Cyprus-Company-Formation/Cyprus-Bank-Account.html" mce_href="/Cyprus-Company-Formation/Cyprus-Bank-Account.html" title="Apply for an Cyprus Bank Account and Learn more by following this link.">Open Cyprus Bank Account 						</a></td> 					</tr> 					<tr> 						<td> 						
-		<img src="/images/stories/cyprus-active.png" alt="Information about Cyprus Banks." width="5" border="0" height="6"><br> 						</td> 						<td> 						
-		<a href="/Table/Cyprus-Company-Blog/index.php" mce_href="/Table/Cyprus-Company-Blog/index.php" title="Our Company BLOG about Cyprus Offshore Products, services and gneral information">Information About Cyprus</a></td> 					</tr> 					<tr> 						<td> 						
-		<img src="/images/stories/cyprus-active.png" alt="Apply Online for a Cyprus Bank Account, now!" width="5" border="0" height="6"></td> 						<td> 						
-		<a href="https://www.cclogic.com/component/option,com_rsform/Itemid,15/" mce_href="https://www.cclogic.com/component/option,com_rsform/Itemid,15/" title="Apply for a Cyprus Bank Account now!">Apply for an Cyprus Bank Account</a></td> 					</tr> 				</tbody> 			</table><table border="0"> <tbody> <tr> </tr> <tr> </tr> <tr> </tr> </tbody> </table>					</div>
+											<table border="0">
+<tbody>
+<tr>
+<td><img src="/images/stories/cyprus-active.png" alt="Become a Cyprus Bank Account, learn more!" width="5" border="0" height="6"><br></td>
+<td><a href="/Cyprus-Company-Formation/Cyprus-Bank-Account.html" title="Apply for an Cyprus Bank Account and Learn more by following this link.">Open Cyprus Bank Account </a></td>
+</tr>
+<tr>
+<td><img src="/images/stories/cyprus-active.png" alt="Information about Cyprus Banks." width="5" border="0" height="6"><br></td>
+<td><a href="/Table/Cyprus-Company-Blog/index.php" title="Our Company BLOG about Cyprus Offshore Products, services and gneral information">Information About Cyprus</a></td>
+</tr>
+<tr>
+<td><img src="/images/stories/cyprus-active.png" alt="Apply Online for a Cyprus Bank Account, now!" width="5" border="0" height="6"></td>
+<td><a href="/register-offshore-company-online/open-cyprus-bank-account.html" title="Apply for a Cyprus Bank Account now!">Apply for an Cyprus Bank Account</a></td>
+</tr>
+</tbody>
+</table>
+<table border="0">
+<tbody>
+<tr>
+</tr>
+<tr>
+</tr>
+<tr>
+</tr>
+</tbody>
+</table>					</div>
 				</div>
 			</div>
 		</div>
@@ -236,8 +260,8 @@
 <!-- End LiveResponse Javascript Code -->		</div>
 	
 				</div>
-																	</div>
-				</div>
+																		</div>
+					</div>
 						<!-- End Bottom Section -->
 <script type="text/javascript" src="/templates/rt_versatility4_j15/js/rokie6warn.js"></script>
 
@@ -251,4 +275,6 @@ var pageTracker = _gat._getTracker("UA-7771509-1");
 pageTracker._trackPageview();
 } catch(err) {}</script>
 	
+<br>
+<b>Warning</b>:  fopen(/home/cclog/public_html/components/com_sh404sef/cache/shCacheContent.php) [<a href="function.fopen">function.fopen</a>]: failed to open stream: Permission denied in <b>/home/cclog/public_html/components/com_sh404sef/shCache.php</b> on line <b>108</b><br>
 </body></html>
