--- a/t/th/the/themisbar.com.html
+++ b/t/th/the/themisbar.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the themisbar.com privacy policy that was archived on 2009-04-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090416202223id_/http%3A//themisbar.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the themisbar.com privacy policy that was archived on 2009-11-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091101191422id_/http%3A//www.themisbar.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="Templates/index.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -76,9 +76,68 @@ document.getElementById("smallWatermark").src="../images/small-themis.gif";
   </div>
   <div id="mainContent">
   		<div id="rightpanel">
-              <div align="center"><a href="https://themisbar.com/register/login.asp?programid=2 "><img src="images/cta-register-now.gif" alt="Register Now" width="186" height="45"></a><br>
+              <div align="center"><a href="https://www.themisbar.com/register/login.asp?programid=2 "><img src="images/cta-register-now.gif" alt="Register Now" width="186" height="45"></a><br>
                 <a href="course-demo.htm"><img src="images/cta-register-tour.gif" alt="Take the Tour" width="186" height="38" style="padding-top:5px;"></a> </div>
-	    <div id="howdoi"><!-- InstanceBeginEditable name="How Do I" -->
+<div id="courseinfo">
+<form name="CourseInfoForm" method="PoSt" action="bar-review-course-bar-exam.asp">
+
+<select name="CourseInfoState" class="tiny" onchange="if (document.CourseInfoForm.selectedIndex!=0) document.CourseInfoForm.submit()">
+<option value="">Choose a state	
+</option><option value="Alabama">Alabama
+</option><option value="Alaska">Alaska
+</option><option value="Arizona">Arizona
+</option><option value="Arkansas">Arkansas
+</option><option value="California">California
+</option><option value="Colorado">Colorado
+</option><option value="Connecticut">Connecticut
+</option><option value="Delaware">Delaware
+</option><option value="District of Columbia">District of Columbia
+</option><option value="Florida">Florida
+</option><option value="Georgia">Georgia
+</option><option value="Hawaii">Hawaii
+</option><option value="Idaho">Idaho
+</option><option value="Illinois">Illinois
+</option><option value="Indiana">Indiana
+</option><option value="Iowa">Iowa
+</option><option value="Kansas">Kansas
+</option><option value="Kentucky">Kentucky
+</option><option value="Louisiana">Louisiana
+</option><option value="Maine">Maine
+</option><option value="Maryland">Maryland
+</option><option value="Massachusetts">Massachusetts
+</option><option value="Michigan">Michigan
+</option><option value="Minnesota">Minnesota
+</option><option value="Mississippi">Mississippi
+</option><option value="Missouri">Missouri
+</option><option value="Montana">Montana
+</option><option value="Nebraska">Nebraska
+</option><option value="Nevada">Nevada
+</option><option value="New Hampshire">New Hampshire
+</option><option value="New Jersey">New Jersey
+</option><option value="New Mexico">New Mexico
+</option><option value="New York">New York
+</option><option value="North Carolina">North Carolina
+</option><option value="North Dakota">North Dakota
+</option><option value="Ohio">Ohio
+</option><option value="Oklahoma">Oklahoma
+</option><option value="Oregon">Oregon
+</option><option value="Pennsylvania">Pennsylvania
+</option><option value="Rhode Island">Rhode Island
+</option><option value="South Carolina">South Carolina
+</option><option value="South Dakota">South Dakota
+</option><option value="Tennessee">Tennessee
+</option><option value="Texas">Texas
+</option><option value="Utah">Utah
+</option><option value="Vermont">Vermont
+</option><option value="Virginia">Virginia
+</option><option value="Washington">Washington
+</option><option value="West Virginia">West Virginia
+</option><option value="Wisconsin">Wisconsin
+</option><option value="Wyoming">Wyoming
+</option></select>
+</form>
+</div>	    
+<div id="howdoi"><!-- InstanceBeginEditable name="How Do I" -->
 <a href="price-info.htm" class="howdoi">Pricing</a><br>
 <a href="course-demo.htm" class="howdoi">View a Demo</a><br>
 <a href="free-content.htm" class="howdoi">Free Content</a><br>
@@ -86,9 +145,10 @@ document.getElementById("smallWatermark").src="../images/small-themis.gif";
 <a href="emailform.htm" class="howdoi">Register Now</a>
 <!-- InstanceEndEditable --><br><br>
                             </div>
-                    <div id="tellmemore"><!-- InstanceBeginEditable name="Tell Me More" --><a href="https://themisbar.com/register/contact.asp" class="howdoi">Request Information</a> <br>
-                      <a href="bar-review-course-bar-exam-news.htm" class="howdoi">Media Center</a>
-                      <div align="right"><br>
+                    <div id="tellmemore"><!-- InstanceBeginEditable name="Tell Me More" --><a href="https://www.themisbar.com/register/contact.asp" class="howdoi">Request Information</a> <br>
+                      <a href="bar-review-course-bar-exam-news.htm" class="howdoi">Media Center</a><br>
+<a href="testimonials.htm" class="howdoi">Testimonials</a>
+                      <div align="right">
            		      <a href="about-themis.htm"><img src="images/small-themis.png" alt="Themis" name="smallWatermark" width="81" height="109" align="bottom" id="smallWatermark"></a> </div>
                     </div><img src="images/test.gif" width="200" height="42"></div>
 	    <!-- InstanceBeginEditable name="Content" -->
