--- a/t/to/top/top-password.com.html
+++ b/t/to/top/top-password.com.html
@@ -1,10 +1,11 @@
-<!--The following is the downloaded HTML source of the top-password.com privacy policy that was archived on 2009-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090623134008id_/http%3A//top-password.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the top-password.com privacy policy that was archived on 2009-11-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091101193512id_/http%3A//www.top-password.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Privacy policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="images/global.css" type="text/css" rel="stylesheet">
+<link href="favicon.ico" rel="shortcut icon">
 <meta name="description" content="Password recovery &amp; password cracking software for: MSN Messenger, AIM, Access, Outlook Express, Outlook password and more. Product Key (CD Key) finder for Windows and Office.">
 <meta name="keywords" content="password recovery, password recovery software, recover password, find password, lost password, crack password, MSN password recovery, MSN password, MSN password finder, MSN Messenger password recovery, Outlook password recovery, Outlook Express password recovery, AIM password recovery, Access password, product key, product key finder, password finder, recover, password">
 <meta name="abstract" content="MSN Messenger, AIM, Access, Outlook Express, Outlook password recovery software. Find lost product key for Windows and Office."> 
@@ -16,28 +17,23 @@
 <meta name="Content-Language" content="en">
 <meta name="audience" content="all">
 </head>
-
-<body><!--menu start--><table width="800" border="0" cellspacing="0" cellpadding="0">
-	<tbody><tr><td><a href="http://www.top-password.com/"><img src="images/logon.gif" border="0" alt="Password Recovery Software" height="50"></a></td><td><table width="560" border="0" cellspacing="0" cellpadding="0" style="margin-top:20px;"><tbody><tr><td colspan="8"></td></tr><tr><td width="60"></td><td id="navmenu" align="center" width="80">
-    <ul><li><a class="menu" href="product.html" style="margin-bottom:0; padding-bottom:0;">Products
-      <!--[if gte IE 7]><!--></a><!--<![endif]-->
-        <!--[if lte IE 6]><table cellspacing="0" cellpadding="0" style="position:absolute; left:278px; top:57px;"><tr><td><![endif]--><ul><li><b>Bundle</b></li>
-          <li><a href="password-recovery-bundle.html">Password Recovery Bundle 2009</a></li>
-          <li><b>Password&nbsp;Recovery</b></li>
-          <li><a href="msn-password-recovery.html">MSN Password</a></li>
-          <li><a href="aim-password-recovery.html">AIM Password</a></li>
-          <li><a href="outlook-password-recovery.html">Outlook Password</a></li>
-          <li><a href="asterisk-password-recovery.html">Asterisk Password</a></li>
-          <li><a href="ie-password-recovery.html">Internet Explorer Password</a></li>
- <li><a href="product.html">More... &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
- <li><b>Others</b></li><li><a href="product-key-finder.html">Product Key Finder</a></li> 
- <li><a href="outlook-express-backup.html">Outlook Express Backup</a></li>
-  </ul><!--[if lte IE 6]></td></tr></table></a><![endif]--></li></ul></td>
-<td><img src="images/spit.gif" alt=""></td><td align="center"><a class="menu" href="purchase.html">Purchase</a></td><td><img src="images/spit.gif" alt=""></td><td align="center"><a class="menu" href="support.html">Support</a></td> <td><img src="images/spit.gif" alt=""></td><td align="center"><a class="menu" href="partner.html">Partners</a></td> <td><img src="images/spit.gif" alt=""></td><td align="center"><a class="menu" href="about.html">About Us</a></td>
-        <td width="30"></td></tr></tbody></table></td></tr></tbody></table><!--menu end-->
-
-<table width="800" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td height="3"></td></tr>
-<tr><td><img src="images/ad.jpg" alt="Find any lost password easily!" border="0" width="800" height="70"></td></tr><tr><td><img src="images/bg_header.gif" height="30" width="100%" alt=""></td></tr></tbody></table>
+<body topmargin="8"><!--menu start--><table width="875" border="0" cellspacing="0" cellpadding="0">
+	<tbody><tr><td><a href="http://www.top-password.com/"><img src="images/logo.gif" border="0" alt="Password Recovery Software" width="195"></a></td><td><table width="680" border="0" cellspacing="0" cellpadding="0">
+	 <form action="http://www.top-password.com/search.html" id="cse-search-box"></form>
+    <tbody><tr height="40" align="right"><td colspan="11" style="padding-right:5px;">
+    <input type="hidden" name="cx" value="008103347779031369904:w3abcrn2vsw"><input type="hidden" name="cof" value="FORID:9">
+    <input type="hidden" name="ie" value="UTF-8"><input type="text" name="q" size="20"></td>
+    <td width="35"><input type="image" name="sa" value="Search" src="images/go.gif"></td></tr>
+<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
+<tr><td width="60"></td><td id="navmenu" align="center" width="80"><ul><li><a class="menu" href="product.html" style="margin-bottom:0; padding-bottom:0;">Products<!--[if gte IE 7]><!--></a><!--<![endif]-->
+<!--[if lte IE 6]><table cellspacing="0" cellpadding="0" style="position:absolute; left:265px; top:70px;"><tr><td><![endif]--><ul><li><b>Bundle</b></li><li><a href="password-recovery-bundle.html">Password Recovery Bundle 2009</a></li>
+   <li><b>Password Recovery</b></li><li><a href="msn-password-recovery.html">MSN Password</a></li><li><a href="aim-password-recovery.html">AIM Password</a></li><li><a href="outlook-password-recovery.html">Outlook Password</a></li>
+   <li><a href="ie-password-recovery.html">Internet Explorer Password</a></li><li><a href="firefox-password-recovery.html">Firefox Password</a></li><li><a href="product.html">More...</a></li>
+ <li><b>Key Finder</b></li><li><a href="product-key-finder.html">Product Key Finder</a></li> </ul>
+ <!--[if lte IE 6]></td></tr></table></a><![endif]--></li></ul></td>
+<td width="1"><img src="images/spit.gif" alt=""></td><td width="102" align="center"><a class="menu" href="purchase.html">Purchase</a></td><td width="1"><img src="images/spit.gif" alt=""></td><td width="87" align="center"><a class="menu" href="support.html">Support</a></td> <td width="1"><img src="images/spit.gif" alt=""></td><td width="94" align="center"><a class="menu" href="partner.html">Partners</a></td> <td width="1"><img src="images/spit.gif" alt=""></td><td width="103" align="center"><a class="menu" href="about.html">About Us</a></td><td colspan="2"></td></tr></tbody></table></td></tr></tbody></table><!--menu end-->
+<table width="875" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td height="3"></td></tr>
+<tr><td><img src="images/ad.jpg" alt="Find any lost password easily!" border="0" width="875" height="70"></td></tr><tr><td><img src="images/bg_header.gif" height="30" width="100%" alt=""></td></tr><tr height="10"><td></td></tr></tbody></table>
 
 <!--   add here   -->
 <!--  body  -->
@@ -132,10 +128,7 @@
           </tbody>
       </table>      <br>    </td>
     <!--   end 222222222222222222  --></tr></tbody></table>
-<!--footer start--><table width="750" class="table1" cellpadding="4">
-<tbody><tr><td width="288" style="font-size:11px;">Copyright © 2007 Top Password Software, Inc. &nbsp;</td>
-<td width="438" align="center" style="font-size:10px; color:#808080;"><a class="footer_" href="/product.html">Password Recovery</a>&nbsp;|&nbsp;<a class="footer_" href="/product-key-finder.html">Product Key</a>&nbsp;|&nbsp;<a class="footer_" href="/purchase.html">Order</a>&nbsp;|&nbsp;<a class="footer_" href="/contact.html">Contact Us</a>&nbsp;|&nbsp;<a class="footer_" href="/privacy.html">Privacy Policy</a></td></tr></tbody></table>
-<!--footer end-->
+<!--footer start--><table width="750" id="copyright"><tbody><tr><td align="center"><a class="footer_" href="index.html">Home</a> &nbsp;|&nbsp; <a class="footer_" href="product.html">Password Recovery</a> &nbsp;|&nbsp; <a class="footer_" href="product-key-finder.html">Product Key Finder</a> &nbsp;|&nbsp; <a class="footer_" href="guides.html">Guides</a> &nbsp;|&nbsp; <a class="footer_" href="contact.html">Contact Us</a> &nbsp;|&nbsp; <a class="footer_" href="privacy.html">Privacy Policy</a> &nbsp;|&nbsp; <a class="footer_" href="sitemap.html">Sitemap</a> </td></tr><tr><td align="center">Copyright © 2007 - 2009 <a class="footer_" href="http://www.top-password.com/">Top Password Software</a>, Inc.</td></tr></tbody></table><!--footer end-->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 <script type="text/javascript">
 _uacct = "UA-4440067-2";
