--- a/n/ni/nij/nijobs.com.html
+++ b/n/ni/nij/nijobs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nijobs.com privacy policy that was archived on 2009-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617203336id_/http%3A//www.nijobs.com/about/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nijobs.com privacy policy that was archived on 2009-11-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091101204944id_/http%3A//www.nijobs.com/about/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 <title>NIJobs.com - Privacy Policy</title>
@@ -52,7 +52,7 @@
 <script language="javascript"><!--
 document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtech.de/addyn/3.0/832/1656321/0/1/ADTECH;loc=100;target=_blank;grp=[group];misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://adserver.adtech.de/addyn/3.0/832/1656321/0/1/ADTECH;loc=100;target=_blank;grp=[group];misc=1580464289176"></script><noscript><a href="http://adserver.adtech.de/adlink/3.0/832/1656321/0/1/ADTECH;loc=300;grp=[group]" target="_blank"><img src="http://adserver.adtech.de/adserv/3.0/832/1656321/0/1/ADTECH;loc=300;grp=[group]" border="0" width="468" height="60"></a></noscript>
+</script><script language="javascript1.1" src="http://adserver.adtech.de/addyn/3.0/832/1656321/0/1/ADTECH;loc=100;target=_blank;grp=[group];misc=1580464290716"></script><noscript><a href="http://adserver.adtech.de/adlink/3.0/832/1656321/0/1/ADTECH;loc=300;grp=[group]" target="_blank"><img src="http://adserver.adtech.de/adserv/3.0/832/1656321/0/1/ADTECH;loc=300;grp=[group]" border="0" width="468" height="60"></a></noscript>
 <!-- End of JavaScript Tag --> 
 
 
@@ -117,7 +117,7 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtech.
 
 </script>
 
-<div style="width: 760px"><div id="nav"><ul><li><span class="green"><a href="/index.asp" title="Job Search" onclick=""><span>Job Search</span></a></span></li><li><span class="navy"><a href="/resource_centre/index.asp" title="Resource Centre" onclick=""><span>Resource Centre</span></a></span></li><li><span class="blue"><a href="/CareerManager/Login.aspx" title="My Career Manager" onclick=""><span>My Career Manager</span></a></span></li><li><span class="purple"><a href="/about/about.asp" title="About Us" onclick="" class="current"><span>About Us</span></a></span></li><li><span class="orange"><a href="/training/training.asp" title="Training" onclick=""><span>Training</span></a></span></li><li><span class="red"><a href="/recruiters/index.asp" title="Recruiters" onclick=""><span>Recruiters</span></a></span></li></ul></div><div id="subnavabout"><a href="/index.asp"><img src="../images/home_button.gif" alt="Home" title="Home" width="20" height="18" border="0" id="homebutton"></a><span id="subnavlinks"><a href="/about/about.asp" class="">about us</a>|<a href="/about/recognition.asp" class="">recognition</a>|<a href="/about/newsroom.asp" class="">newsroom</a>|<a href="/about/contact.asp" class="">contact</a>|<a href="/about/privacy.asp" class="">privacy</a></span></div></div> 
+<div style="width: 760px"><div id="nav"><ul><li><span class="green"><a href="/index.asp" title="Job Search" onclick=""><span>Job Search</span></a></span></li><li><span class="navy"><a href="/resource_centre/index.asp" title="Resource Centre" onclick=""><span>Resource Centre</span></a></span></li><li><span class="blue"><a href="/CareerManager/Login.aspx" title="My Career Manager" onclick=""><span>My Career Manager</span></a></span></li><li><span class="purple"><a href="/about/about.asp" title="About Us" onclick="" class="current"><span>About Us</span></a></span></li><li><span class="orange"><a href="/training/training.asp" title="Training" onclick=""><span>Training</span></a></span></li><li><span class="blue"><a href="/clients/myhorizon/myhorizon.asp" title="myhorizon.ie" onclick=""><span>myhorizon.ie</span></a></span></li><li><span class="red"><a href="/recruiters/index.asp" title="Recruiters" onclick=""><span>Recruiters</span></a></span></li></ul></div><div id="subnavabout"><a href="/index.asp"><img src="../images/home_button.gif" alt="Home" title="Home" width="20" height="18" border="0" id="homebutton"></a><span id="subnavlinks"><a href="/about/about.asp" class="">about us</a>|<a href="/about/recognition.asp" class="">recognition</a>|<a href="/about/newsroom.asp" class="">newsroom</a>|<a href="/about/contact.asp" class="">contact</a>|<a href="/about/privacy.asp" class="">privacy</a></span></div></div> 
 
 <div class="clear"></div>
 <!-- end navwrapper div -->
@@ -608,25 +608,10 @@ function MM_swapImgRestore() { //v3.0
 </div>
 
 <div id="copy">
-<p>© 2008 NIjobs.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NIjobs.com is a registered trademark of saongroup.com </p>
+<p>© 2009 NIjobs.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NIjobs.com is a registered trademark of saongroup.com </p>
 </div>
 
 <div class="clear"></div>
-<!--
-Code Placement:
-Code is to be placed within each webpage directly before the close body tag, </BODY>.
--->
-
-<script type="text/javascript" src="https://t.bmmetrix.com/ie/nijobs_ie/bmv13.js"></script>
-<script type="text/javascript">
-<!--
-//1.3.0.7
-var bmsec = new Array ();
-getBMqs('', '', '', 'nijobs_ie', 'ie', 'UTF-8', bmsec);
-//-->
-</script>
-<noscript><img src="https://ie-stat.bmmetrix.com/V13a****nijobs_ie/ie/UTF-8//" alt="" /></noscript>
-	
 
 <!-- end sistersites div -->
 </div>
@@ -705,7 +690,7 @@ var now = new Date();
 var nIndex = now.getTime();
 document.write('<s' + 'cript src="http://www.utarget.co.uk/scriptinject.aspx?h=1505&nocache=' + nIndex + '">');
 document.write('</' + 's' + 'cript>');
-</script><script src="http://www.utarget.co.uk/scriptinject.aspx?h=1505&amp;nocache=1580464290295"></script>
+</script><script src="http://www.utarget.co.uk/scriptinject.aspx?h=1505&amp;nocache=1580464291810"></script>
 <!--------- utarget Ad code Ends --------------->
 
 
@@ -731,7 +716,7 @@ document.write('</' + 's' + 'cript>');
 <script language="javascript"><!--
 document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtech.de/addyn/3.0/832/1656322/0/168/ADTECH;loc=100;target=_blank;grp=[group];misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://adserver.adtech.de/addyn/3.0/832/1656322/0/168/ADTECH;loc=100;target=_blank;grp=[group];misc=1580464290296"></script><noscript><a href="http://adserver.adtech.de/adlink/3.0/832/1656322/0/168/ADTECH;loc=300;grp=[group]" target="_blank"><img src="http://adserver.adtech.de/adserv/3.0/832/1656322/0/168/ADTECH;loc=300;grp=[group]" border="0" width="120" height="600"></a></noscript>
+</script><script language="javascript1.1" src="http://adserver.adtech.de/addyn/3.0/832/1656322/0/168/ADTECH;loc=100;target=_blank;grp=[group];misc=1580464291814"></script><noscript><a href="http://adserver.adtech.de/adlink/3.0/832/1656322/0/168/ADTECH;loc=300;grp=[group]" target="_blank"><img src="http://adserver.adtech.de/adserv/3.0/832/1656322/0/168/ADTECH;loc=300;grp=[group]" border="0" width="120" height="600"></a></noscript>
 <!-- End of JavaScript Tag -->
 
 </div>
