--- a/f/fl/flo/floridatrend.com.html
+++ b/f/fl/flo/floridatrend.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the floridatrend.com privacy policy that was archived on 2009-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090620055009id_/http%3A//www.floridatrend.com/section.asp%3FsecID%3D8) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the floridatrend.com privacy policy that was archived on 2009-11-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091102013714id_/http%3A//www.floridatrend.com/section.asp%3FsecID%3D8) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -79,31 +79,39 @@ zone = 'bonusbox';
 				<!--
 				doubleclickAd('ldr');
 				//-->
-				</script><script language="JavaScript" src="https://web.archive.org/web/20110304205533/http://ad.doubleclick.net/adj/floridatrend/bonusbox;zn=bonusbox;pos=ldr;sz=950x400,728x90;tile=1;ord=38138165963702586?" type="text/javascript"></script>
+				</script><script language="JavaScript" src="https://web.archive.org/web/20110304205533/http://ad.doubleclick.net/adj/floridatrend/bonusbox;zn=bonusbox;pos=ldr;sz=950x400,728x90;tile=1;ord=8009164879578199?" type="text/javascript"></script>
                 </div>				
 			</td>
             </tr>
             </tbody></table>
 			<!--END LEADERBOARD AREA -->	</center>
 <!-- BEGIN HEADER -->
-<table width="996" height="77" border="0" align="center" cellpadding="0" cellspacing="0">
+<table width="996" border="0" align="center" cellpadding="0" cellspacing="0">
 	<tbody><tr>
-		<td width="481" height="52" align="left">
-			<a href="http://www.floridatrend.com/"><img src="../images/headers/fltrendhed09.gif" alt="Florida Trend, FloridaTrend.com" width="481" height="52" border="0"></a></td>
-  <td width="177" height="52" align="left">
-			<a href="http://www.floridatrend.com/small_biz.asp"><img src="../images/headers/bizfla09b_03.gif" alt="Florida Small Business, FloridaSmallBusiness.com" width="177" height="52" border="0"></a></td>
-  <td width="177" height="52" align="left">
-			<a href="http://www.businessflorida.com"><img src="../images/headers/fsbhed09a_03.gif" alt="Business Florida, BusinessFlorida.com" width="177" height="52" border="0"></a></td>
-      <td width="161" height="52">
-		<!-- begin subscribe top right include -->
-<a href="http://www.floridatrend.com/subscribe.asp"><img src="../images/headers/sub_ear.gif" alt="Subscribe" width="161" height="52" border="0"></a><!-- end subscribe top right include -->
+		<td width="462" height="60" align="left">
+			<a href="http://www.floridatrend.com/">
+      <img src="../images/headers/fltrendhed09c.gif" alt="Florida Trend, FloridaTrend.com" width="462" height="60" border="0">
+      </a></td>
+  <td width="177" height="60" align="left" valign="bottom">
+			<a href="http://www.floridatrend.com/small_biz.asp">
+      <img src="../images/headers/bizfla09b_03c.gif" alt="Florida Small Business, FloridaSmallBusiness.com" width="177" height="60" border="0">
+      </a></td>
+  <td width="177" height="60" align="left" valign="bottom">
+			<a href="http://www.businessflorida.com">
+      <img src="../images/headers/fsbhed09a_03c.gif" alt="Business Florida, BusinessFlorida.com" width="177" height="60" border="0">
+      		</a></td>
+  <td width="180" height="60" valign="baseline">
 
+			  <script language="JavaScript">
+			  <!--
+				doubleclickAd('skybox');
+  			//-->
+ 			 </script><script language="JavaScript" src="https://web.archive.org/web/20110304205533/http://ad.doubleclick.net/adj/floridatrend/bonusbox;zn=bonusbox;pos=skybox;sz=180x60;tile=2;ord=8009164879578199?" type="text/javascript"></script>
 
-      </td>
-	</tr>
+  </td>
+  </tr>
   <tr>
-	<td width="501" align="left" valign="top"><span class="size2">&nbsp;The Issues, People and Ideas that Define Florida Business</span><span class="BoxedText"><img src="../images/headers/spacer.gif" width="20" height="24" border="0" align="texttop"></span>
-    </td>
+	<td width="501" align="left" valign="top"><span class="size2">&nbsp;The Issues, People and Ideas that Define Florida Business</span></td>
     <td colspan="2" align="center">		
 		<form action="http://www.floridatrend.com/search_google.asp" id="cse-search-box">
   <div class="search_area">
@@ -115,15 +123,11 @@ zone = 'bonusbox';
     <input type="submit" name="sa" value="." class="search_button">    
   </div>
 </form>
-<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
-   	</td>
-   	<td><span class="logoText">&nbsp;&nbsp; <a href="http://www.floridatrend.com/site_map.asp">Site Map</a> | <a href="http://www.floridatrend.com/section.asp?secID=5">Contact Us</a></span>   	</td>
-  </tr>
-  <tr>
-   	<td colspan="4" height="1" align="left" valign="top"><img src="../images/headers/spacer.gif" width="10" height="1"></td>
+<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>   	</td>
+   	<td><span class="logoText">&nbsp;&nbsp; <a href="http://www.floridatrend.com/site_map.asp">Site Map</a> | <a href="http://www.floridatrend.com/section.asp?secID=5">Contact Us</a></span></td>
   </tr>
 </tbody></table>
-<!-- END HEADER --><div id="ftNav">
+<!-- END HEADER --><div id="ftNav" style="margin: -2px 0 0 0">
 <!-- BEGIN TOP NAVIGATION -->		
 		<table border="0" style="border-collapse: collapse" cellpadding="0" width="996" id="table7">
 			<tbody><tr>
@@ -346,7 +350,9 @@ zone = 'bonusbox';
 								<td class="navText" align="center" onmouseout="menu('Submenu10'); this.className='navText'" onmouseover="menu('Submenu4'); this.className='navOvr'">
 									<div id="Submenu4" style="margin-top:20px; text-align:left" class="dropdown2" onmouseout="menu('Submenu10')" onmouseover="menu('Submenu4')">
 										<table border="0" cellspacing="0" cellpadding="0" class="navCell" width="100%" id="drop6">
-											<tbody><tr>
+                                        											<tbody><tr>
+												<td class="navA" onmouseover="this.className='navOn'" onmouseout="this.className='navA'" onclick="javascript:window.location='best_companies.asp'">• <strong>Best Companies</strong></td>
+											</tr><tr>
 												<td class="navA" onmouseover="this.className='navOn'" onmouseout="this.className='navA'" onclick="javascript:window.location='article.asp?aID=50744'">• <strong>Economic Yearbook</strong></td>
 										  </tr>
 
@@ -737,14 +743,14 @@ If you  wish to discontinue receiving communications from us at any time, please
           <!--
         	doubleclickAd('medrect');
           //-->
-          </script><script language="JavaScript" src="https://web.archive.org/web/20110304205533/http://ad.doubleclick.net/adj/floridatrend/bonusbox;zn=bonusbox;pos=medrect;sz=300x250;tile=2;ord=38138165963702586?" type="text/javascript"></script>
+          </script><script language="JavaScript" src="https://web.archive.org/web/20110304205533/http://ad.doubleclick.net/adj/floridatrend/bonusbox;zn=bonusbox;pos=medrect;sz=300x250;tile=3;ord=8009164879578199?" type="text/javascript"></script>
         </div>
         <div style="float:left;" class="skyscraper">
 		  <script language="JavaScript">
 		  <!--
 			doubleclickAd('widesky1');
 		  //-->
-		  </script><script language="JavaScript" src="https://web.archive.org/web/20110304205533/http://ad.doubleclick.net/adj/floridatrend/bonusbox;zn=bonusbox;pos=widesky1;sz=160x600;tile=3;ord=38138165963702586?" type="text/javascript"></script>
+		  </script><script language="JavaScript" src="https://web.archive.org/web/20110304205533/http://ad.doubleclick.net/adj/floridatrend/bonusbox;zn=bonusbox;pos=widesky1;sz=160x600;tile=4;ord=8009164879578199?" type="text/javascript"></script>
 		</div>        
         
         <div class="sideliner" style="float: left;">
@@ -859,9 +865,8 @@ If you  wish to discontinue receiving communications from us at any time, please
       <p><a href="http://www.floridatrend.com/restaurant_guide.asp">The Great Florida Restaurant Guide</a></p>    </td>
     <td width="136">
       <p><a href="http://www.floridatrend.com/florida_innovation.asp">Florida Innovation</a></p>
-      <p><a href="http://www.floridatrend.com/wide_article.asp?aID=49610">Florida's Green Advantages</a></p>
       <p><a href="http://www.floridatrend.com/article.asp?aID=50445">Logistics and Supply Chain Management</a></p>
-      <p><a href="http://www.floridatrend.com/best_companies.asp">Best Companies To Work For In Florida</a></p></td>
+      <p><a href="http://www.floridatrend.com/best_companies.asp">Florida's Best Companies To Work For 2009</a></p></td>
   </tr>
 </tbody></table>     </div>         
    	    </div>
@@ -938,7 +943,7 @@ If you  wish to discontinue receiving communications from us at any time, please
 <!--
 doubleclickAd('popup');
 //-->
-</script><script language="JavaScript" src="https://web.archive.org/web/20110304205533/http://ad.doubleclick.net/adj/floridatrend/bonusbox;zn=bonusbox;pos=popup;sz=250x250;tile=4;ord=38138165963702586?" type="text/javascript"></script>
+</script><script language="JavaScript" src="https://web.archive.org/web/20110304205533/http://ad.doubleclick.net/adj/floridatrend/bonusbox;zn=bonusbox;pos=popup;sz=250x250;tile=5;ord=8009164879578199?" type="text/javascript"></script>
 </div>
 <!-- END 250 x 250 popup ADVERT -->		
 
@@ -953,7 +958,24 @@ var pageTracker = _gat._getTracker("UA-94798-20");
 pageTracker._initData();
 pageTracker._trackPageview();
 </script>
-<script type="text/javascript" src="includes/ieupdate.js"></script>  
+<script type="text/javascript" src="includes/ieupdate.js"></script>
+
+<!-- START Nielsen//NetRatings SiteCensus V5.3 -->
+<!-- COPYRIGHT 2007 Nielsen//NetRatings -->
+<script type="text/javascript">
+ var _rsCI="us-bpaww";
+ var _rsCG="0";
+ var _rsDN="//secure-us.imrworldwide.com/";
+ var _rsPLfl=0;
+ var _rsSE=1;
+ var _rsSM=1.0;
+ var _rsCL=1;
+</script>
+<script type="text/javascript" src="//secure-us.imrworldwide.com/v53.js"></script>
+<noscript>
+ <div><img src="//secure-us.imrworldwide.com/cgi-bin/m?ci=us-bpaww&amp;cg=0&amp;cc=1" alt=""/></div>
+</noscript>
+<!-- END Nielsen//NetRatings SiteCensus V5.3 -->  
 </div>
 
 
