--- a/w/we/web/websitemarketingplan.com.html
+++ b/w/we/web/websitemarketingplan.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the websitemarketingplan.com privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619210012id_/http%3A//www.websitemarketingplan.com/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the websitemarketingplan.com privacy policy that was archived on 2009-11-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091102013746id_/http%3A//www.websitemarketingplan.com/privacy_policy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy</title>
@@ -231,19 +231,19 @@ Cookies</h2>
 WebSiteMarketingPlan.com uses cookies to avoid repeating 
 some 
 advertising messages to returning visitors. We do <b>not</b> 
-use cookies to develop individual profiles.</p>
-<p>
-Third party sites providing content, links, or advertising, 
-however, may 
-use cookies, typically for fulfilling a request or for 
-tracking purposes. Third party sites are governed by 
-their own privacy policies.
-</p>
-<p>
+use cookies to develop individual profiles.
 You are not required to accept cookies when viewing WebsiteMarketingPlan.com, WebMarketingPlace.com, 
 or MyOnlineWeddingHelp.com.&nbsp; If you are concerned 
 about cookies, you have the option of 
 setting your browser to block or prompt for cookies.</p>
+<p>
+We use third-party advertising companies to serve ads when you visit our 
+website. These companies may use information (not including your name, address, 
+email address, or telephone number) about your visits to this and other websites 
+in order to provide advertisements about goods and services of interest to you. 
+If you would like more information about this practice and to know your choices 
+about not having this information used by these companies,
+<a target="_blank" href="http://www.google.com/privacy_ads.html">click here</a>.</p>
           
 <table border="0" width="200" align="right">
 <tbody><tr>
@@ -592,17 +592,16 @@ Marketing Plan Info</a></p><p class="txt_9">
 &nbsp;<a target="_blank" href="http://www.websitemarketingplan.com/mplan/marketingplantips.pdf">Calm Mrktg Plan Panic, PDF</a><br>
 &nbsp;
 
-<table width="195" border="0" style="border-collapse: collapse">
+<table width="150" border="0" style="border-collapse: collapse">
 <tbody><tr>
-<td width="195" valign="top">
+<td width="150" valign="top">
 <p class="txt_9">
 <u><b>St. Louis, MO Resources</b></u>&nbsp;<br>
 &nbsp;<a target="_self" href="http://www.websitemarketingplan.com/SLPA/">Book Marketing (SLPA)</a><br>
-&nbsp;&nbsp;&nbsp;<a target="_self" href="http://www.WebSiteMarketingPlan.com/SLPA/firstwebsite.htm">Publishing Your First Website</a><br>
-&nbsp;&nbsp;&nbsp;<a target="_self" href="http://www.websitemarketingplan.com/SLPA/book_marketing.htm">Marketing a Book Online</a><br>
-&nbsp; <a target="_self" href="http://www.websitemarketingplan.com/design.htm">St. Louis Web Development</a><br>
-&nbsp; 
-<a target="_self" href="http://www.websitemarketingplan.com/Website/StLouisMO.htm">St. Louis, MO Small Business</a></p><p class="txt_9">
+&nbsp;<a target="_self" href="http://www.WebSiteMarketingPlan.com/SLPA/firstwebsite.htm">Publishing Your First Website</a><br>
+&nbsp;<a target="_self" href="http://www.websitemarketingplan.com/SLPA/book_marketing.htm">Marketing a Book Online</a><br>
+&nbsp;<a target="_self" href="http://www.websitemarketingplan.com/design.htm">St. Louis Web Development</a><br>
+&nbsp;<a target="_self" href="http://www.websitemarketingplan.com/Website/StLouisMO.htm">St. Louis, MO Small Business</a></p><p class="txt_9" align="left">
 
 <b>
 
@@ -612,31 +611,15 @@ Marketing Plan Info</a></p><p class="txt_9">
 &nbsp;<a target="_self" href="http://www.websitemarketingplan.com/Experience.htm">Credentials</a><br>
 &nbsp;<a target="_self" href="http://www.websitemarketingplan.com/contact.htm">Contact</a><br>
 <b><u>Bobette's Book</u></b><br>
-&nbsp;<i><a href="http://www.websitemarketingplan.com/MarketingBook/Purchase.htm#Marketing Plan Package One" target="_self">Strategic Website Marketing</a></i></p><p class="txt_9">
-
-<u><b><font size="1">Get new content notification feed:</font></b></u><font size="1"><br> 
-</font> 
-<a href="http://www.websitemarketingplan.com/strategy/feed/" target="_self">
-<font size="1">
-<img border="0" src="http://www.websitemarketingplan.com/images/xml.GIF" alt="Web Site Marketing Plan .com Sites Updates" width="36" height="14" longdesc="RSS feed for marketing planning and Web site promotion marketing."></font></a><font size="1">
-<br>
-
-</font>
-
-<b><u><font size="1">Add new content notices to MyYahoo!</font></u></b><font size="1">
-</font>
-<a target="_self" href="http://add.my.yahoo.com/rss?url=http://www.websitemarketingplan.com/strategy/feed/">
-<font size="1">
-<img src="http://www.websitemarketingplan.com/images/addtomyyahoo2.gif" border="0" height="14" width="100" alt="Add marketing plan and Web site promotion marketing feed to MyYahoo!"></font></a><font size="1">
-</font>
-</p></td></tr>
-</tbody></table>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<i>
+<a href="http://www.websitemarketingplan.com/MarketingBook/Purchase.htm#Marketing Plan Package One" target="_self">Strategic Website Marketing</a></i><script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-398054-1";
 urchinTracker();
 </script>
+</p></td></tr>
+</tbody></table>
 </p></td>
 </tr>
 </tbody></table>
@@ -645,7 +628,7 @@ urchinTracker();
 </tbody></table>
 
 </td></tr></tbody></table>
-<!--webbot bot="Include" i-checksum="12695" endspan --></td>
+<!--webbot bot="Include" i-checksum="37070" endspan --></td>
     
 </tr>
   
