broadbandbuyer.co.uk (archived on 2009-11-02)
{
  "alexa_rank": 86056,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 1482,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "broadbandbuyer.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090930094639id_/http://www.broadbandbuyer.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090930094639id_/http%3A//broadbandbuyer.co.uk",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "broadbandbuyer.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091102080321id_/http%3A//www.broadbandbuyer.co.uk/Shop/Info/Privacy.asp",
  "policy_title": "Broadbandbuyer.co.uk | Privacy Policy",
  "policy_url": "broadbandbuyer.co.uk/Shop/Info/Privacy.asp",
  "sha1": "45c1e227ba1df9e76c7e5a349305da1f4662a09e",
  "simhash": 15402525098381782975,
  "simhash_updated": false,
  "site_hostname": "broadbandbuyer.co.uk",
  "site_url": "http://broadbandbuyer.co.uk",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20091102080321",
  "word_count": 210,
  "year": 2009
}

--- a/b/br/bro/broadbandbuyer.co.uk.html
+++ b/b/br/bro/broadbandbuyer.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the broadbandbuyer.co.uk privacy policy that was archived on 2009-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090621073227id_/http%3A//www.broadbandbuyer.co.uk/Shop/Info/Privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the broadbandbuyer.co.uk privacy policy that was archived on 2009-11-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091102080321id_/http%3A//www.broadbandbuyer.co.uk/Shop/Info/Privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Broadbandbuyer.co.uk | Privacy Policy</title>
@@ -150,8 +150,6 @@ Tel. 01908 329007 <br>
 <a href="http://www.royalmail.com"><img src="/images/Couriers/small_RoyalMail.gif" alt="Delivery by Royal Mail" width="55" height="39" border="0"></a>
 <a href="http://www.city-link.co.uk"><img src="/images/Couriers/CityLink.gif" alt="Next Day delivery by City Link" width="130" height="24" border="0"></a>
 <div class="main_bodyblack">Worldwide delivery to 
-<a class="main_bodyblack" href="/Shop/Info/Delivery.asp?SalesTaxID=21">Australia</a>
-, 
 <a class="main_bodyblack" href="/Shop/Info/Delivery.asp?SalesTaxID=28">Austria</a>
 , 
 <a class="main_bodyblack" href="/Shop/Info/Delivery.asp?SalesTaxID=18">Belgium</a>
@@ -186,6 +184,8 @@ Tel. 01908 329007 <br>
 , 
 <a class="main_bodyblack" href="/Shop/Info/Delivery.asp?SalesTaxID=94">Indonesia</a>
 , 
+<a class="main_bodyblack" href="/Shop/Info/Delivery.asp?SalesTaxID=84">Ireland</a>
+, 
 <a class="main_bodyblack" href="/Shop/Info/Delivery.asp?SalesTaxID=20">Isle of Man</a>
 , 
 <a class="main_bodyblack" href="/Shop/Info/Delivery.asp?SalesTaxID=83">Isle of Sark</a>
@@ -212,7 +212,7 @@ Tel. 01908 329007 <br>
 , 
 <a class="main_bodyblack" href="/Shop/Info/Delivery.asp?SalesTaxID=22">Portugal</a>
 , 
-<a class="main_bodyblack" href="/Shop/Info/Delivery.asp?SalesTaxID=84">Republic of Ireland</a>
+<a class="main_bodyblack" href="/Shop/Info/Delivery.asp?SalesTaxID=105">Serbia</a>
 , 
 <a class="main_bodyblack" href="/Shop/Info/Delivery.asp?SalesTaxID=59">Slovakia</a>
 , 
@@ -231,9 +231,9 @@ Tel. 01908 329007 <br>
 <a class="main_bodyblack" href="/Shop/Info/Delivery.asp?SalesTaxID=19">USA</a>
 .</div>
 <br>
-<div class="main_body"><a href="/Shop/Info/About.asp" class="main_bodyblack">About Us</a> | <a href="/Shop/Info/Contact.asp" class="main_bodyblack">Contact Us</a> | <a href="/Shop/Info/Delivery.asp" class="main_bodyblack">Delivery Costs</a> | <a href="/Shop/Info/ReturnsPolicy.asp" class="main_bodyblack">Returns Policy</a> | <a href="/Shop/Info/Terms.asp" class="main_bodyblack">Terms and Conditions</a> | <a href="/Shop/PageTextDetail.asp?SetID=4&amp;TextID=38" class="main_body"> </a> <a href="/Shop/Info/Privacy.asp" class="main_bodyblack">Privacy Policy</a> | <a href="http://www.broadbond.com" class="main_bodyblack">Bonded Broadband</a></div>
+<div class="main_body"><a href="/Shop/Info/About.asp" class="main_bodyblack">About Us</a> | <a href="/Shop/Info/Contact.asp" class="main_bodyblack">Contact Us</a> | <a href="/Shop/Info/Delivery.asp" class="main_bodyblack">Delivery Costs</a> | <a href="/Shop/Info/ReturnsPolicy.asp" class="main_bodyblack">Returns Policy</a> | <a href="/Shop/Info/Terms.asp" class="main_bodyblack">Terms and Conditions</a> | <a href="/Shop/PageTextDetail.asp?SetID=4&amp;TextID=38" class="main_body"> </a> <a href="/Shop/Info/Privacy.asp" class="main_bodyblack">Privacy Policy</a></div>
 <div class="main_bodyblack">If you experience any problems with this site please send an email to: <a href="mailto:webmaster@broadbandbuyer.co.uk" class="main_bodyblack">webmaster@broadbandbuyer.co.uk</a></div>
-<div class="main_body">© 2002 - 2009 Broadbandbuyer.co.uk | v 7.5 | 383/P/C/V/41</div>
+<div class="main_body">© 2002 - 2009 Broadbandbuyer.co.uk | v 7.5 | 711/P/C/V/41</div>
 <div><a href="http://www.google.co.uk"><img src="/images/gui_misc/powered_by_google.gif" alt="Powered by Google" border="0"></a></div>
 </td>
 </tr>
