epage.com (archived on 2009-11-02)
{
  "alexa_rank": 35785,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 14392,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.16,
  "homepage_snapshot_redirected_domain": "epage.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091022134726id_/http://epage.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091022134726id_/http%3A//epage.com",
  "interval": "2009_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "epage.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091102133948id_/http%3A//epage.com/js/faq%3Fpath%3DFAQ/About_EPage%26rid%3DHF0000001036",
  "policy_title": "FAQ/About_EPage",
  "policy_url": "epage.com/js/faq?path=FAQ/About_EPage&rid=HF0000001036",
  "sha1": "71622e816dec3d2e3fc1f6735104dd274ef0d024",
  "simhash": 12664080065120256008,
  "simhash_updated": false,
  "site_hostname": "epage.com",
  "site_url": "http://epage.com",
  "smog": 14.17,
  "strict_updated": false,
  "timestamp": "20091102133948",
  "word_count": 2398,
  "year": 2009
}

--- a/e/ep/epa/epage.com.html
+++ b/e/ep/epa/epage.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the epage.com privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618180758id_/http%3A//www.epage.com/js/faq%3Fpath%3DFAQ/About_EPage%26rid%3DHF0000001036) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the epage.com privacy policy that was archived on 2009-11-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091102133948id_/http%3A//epage.com/js/faq%3Fpath%3DFAQ/About_EPage%26rid%3DHF0000001036) for the most accurate reproduction.-->
 
 <html><head><title>FAQ/About_EPage</title>
 <script language="JavaScript">
 <!--
 var par = "";
-var parsession = ";jsessionid=9918C3A8AD12CA49917E16AF3782F878";
+var parsession = ";jsessionid=A8769A87A35EBCB93D4F2300A7844D31";
 function cc(thelink) {
   var newurl = thelink.href;
   if (newurl.indexOf(par) > 2) return true;
@@ -75,26 +75,32 @@ document.getElementById('wa_u').src=wa_hp+'://counter.hitslink.com/track.js'
 
 <table border="0" cellpadding="0" cellspacing="0"><tbody><tr>
 
-<td><div><a href="/js/post/;jsessionid=9918C3A8AD12CA49917E16AF3782F878"><img src="/tmpl/0/post.gif" border="0" name="post" alt="post" onmouseout="document.post.src='/tmpl/0/post.gif'" onmouseover="document.post.src='/tmpl/0/post_over.gif'"></a></div></td>
+<td><div><a href="/js/post/;jsessionid=A8769A87A35EBCB93D4F2300A7844D31"><img src="/tmpl/0/post.gif" border="0" name="post" alt="post" onmouseout="document.post.src='/tmpl/0/post.gif'" onmouseover="document.post.src='/tmpl/0/post_over.gif'"></a></div></td>
 
 
 
-<td><div><a href="/js/search/;jsessionid=9918C3A8AD12CA49917E16AF3782F878"><img src="/tmpl/0/search.gif" border="0" name="search" alt="search" onmouseout="document.search.src='/tmpl/0/search.gif'" onmouseover="document.search.src='/tmpl/0/search_over.gif'"></a></div></td>
+<td><div><a href="/js/search/;jsessionid=A8769A87A35EBCB93D4F2300A7844D31"><img src="/tmpl/0/search.gif" border="0" name="search" alt="search" onmouseout="document.search.src='/tmpl/0/search.gif'" onmouseover="document.search.src='/tmpl/0/search_over.gif'"></a></div></td>
 
 
 
-<td><div><a href="/js/browse/;jsessionid=9918C3A8AD12CA49917E16AF3782F878"><img src="/tmpl/0/browse.gif" border="0" name="browse" alt="browse" onmouseout="document.browse.src='/tmpl/0/browse.gif'" onmouseover="document.browse.src='/tmpl/0/browse_over.gif'"></a></div></td>
+
+<td><div><a href="/js/gold.jsp"><img src="/tmpl/0/gold.gif" border="0" name="gold" alt="search" onmouseout="document.gold.src='/tmpl/0/gold.gif'" onmouseover="document.gold.src='/tmpl/0/gold_over1.gif'"></a></div></td>
 
 
 
-<td><div><a href="/js/account/;jsessionid=9918C3A8AD12CA49917E16AF3782F878"><img src="/tmpl/0/member.gif" border="0" name="member" alt="member" onmouseout="document.member.src='/tmpl/0/member.gif'" onmouseover="document.member.src='/tmpl/0/member_over.gif'"></a></div></td>
+
+<td><div><a href="/js/browse/;jsessionid=A8769A87A35EBCB93D4F2300A7844D31"><img src="/tmpl/0/browse.gif" border="0" name="browse" alt="browse" onmouseout="document.browse.src='/tmpl/0/browse.gif'" onmouseover="document.browse.src='/tmpl/0/browse_over.gif'"></a></div></td>
+
+
+
+<td><div><a href="/js/account/;jsessionid=A8769A87A35EBCB93D4F2300A7844D31"><img src="/tmpl/0/member.gif" border="0" name="member" alt="member" onmouseout="document.member.src='/tmpl/0/member.gif'" onmouseover="document.member.src='/tmpl/0/member_over.gif'"></a></div></td>
 
 
 </tr></tbody></table>
 
 </div></td>
 
-<td width="40%" style="border-bottom:1px solid #999999;padding-right:5px" align="RIGHT"><div><b>June 18, 2009</b></div></td>
+<td width="40%" style="border-bottom:1px solid #999999;padding-right:5px" align="RIGHT"><div><b>November 2, 2009</b></div></td>
 </tr></tbody></table>
     
     
@@ -107,7 +113,7 @@ document.getElementById('wa_u').src=wa_hp+'://counter.hitslink.com/track.js'
 <center><br><br>
 
 <table width="550">
-<tbody><tr><td><div><a href="/" class="L1">Home</a> &gt; <a href="/js/faq/;jsessionid=9918C3A8AD12CA49917E16AF3782F878?path=FAQ/" class="L1">FAQ</a> &gt; <a href="/js/faq/;jsessionid=9918C3A8AD12CA49917E16AF3782F878?path=FAQ/About_EPage/" class="L1">About EPage</a> &gt; </div><br></td></tr>
+<tbody><tr><td><div><a href="/" class="L1">Home</a> &gt; <a href="/js/faq/;jsessionid=A8769A87A35EBCB93D4F2300A7844D31?path=FAQ/" class="L1">FAQ</a> &gt; <a href="/js/faq/;jsessionid=A8769A87A35EBCB93D4F2300A7844D31?path=FAQ/About_EPage/" class="L1">About EPage</a> &gt; </div><br></td></tr>
 <tr><td>
 <div>
 
@@ -413,11 +419,11 @@ Our site provides users the opportunity to opt-out of receiving
 <div>
 <center><font size="-1">
 [ <a href="/">Home</a> |
-<a href="/js/browse/;jsessionid=9918C3A8AD12CA49917E16AF3782F878">Browse</a> |
-<a href="/js/search/;jsessionid=9918C3A8AD12CA49917E16AF3782F878">Search</a> |
-<a href="/js/account/;jsessionid=9918C3A8AD12CA49917E16AF3782F878">Account</a> |
-<a href="/js/comments/;jsessionid=9918C3A8AD12CA49917E16AF3782F878">Comments</a> |
-<a href="/js/faq/;jsessionid=9918C3A8AD12CA49917E16AF3782F878">FAQ</a> ]
+<a href="/js/browse/;jsessionid=A8769A87A35EBCB93D4F2300A7844D31">Browse</a> |
+<a href="/js/search/;jsessionid=A8769A87A35EBCB93D4F2300A7844D31">Search</a> |
+<a href="/js/account/;jsessionid=A8769A87A35EBCB93D4F2300A7844D31">Account</a> |
+<a href="/js/comments/;jsessionid=A8769A87A35EBCB93D4F2300A7844D31">Comments</a> |
+<a href="/js/faq/;jsessionid=A8769A87A35EBCB93D4F2300A7844D31">FAQ</a> ]
 <br>
 [ <a href="http://www.daplus.us/BusinessSearch.aspx?Partner=400214">Yellow Page Search</a> |
 <a href="http://www.daplus.us/PeopleSearch.aspx?Partner=400214">White Page Search</a> |
